# FreeUSD

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  security_best_practices_report.md
.github/: dependabot.yml
.github/workflows/: ci.yml  cursor-agent.yml
bindings/: README.md
bindings/d/: .gitignore  dub.json
bindings/go/: freeusd.go  freeusd_test.go  go.mod
bindings/rust/: Cargo.toml
build-all/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  freeusd_ar_resolved_path_test  freeusd_c_stage_composition_arcs  freeusd_c_stage_layer_hints  freeusd_c_stage_open_from_file  freeusd_gf_bbox3d_test  freeusd_gf_quatd_test  freeusd_stage_compose_test  freeusd_time_code_test  freeusd_usd_cross_language_test
build-all/src/: Makefile  cmake_install.cmake
build-ci/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  freeusd_c_smoke_test  freeusd_c_stage_prim_specifier  freeusd_edit_target_test  freeusd_gf_bbox3d_test  freeusd_gf_quatd_test  freeusd_sdf_layer_offset_test  freeusd_sdf_path_test  freeusd_sdf_tokens_test  freeusd_selftest  freeusd_time_code_test  freeusd_usd_tokens_test  install_manifest.txt
build-ci/src/: Makefile  cmake_install.cmake
build-int/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  freeusd_c_stage_prefix_substitution  freeusd_c_stage_relocate  freeusd_c_usd_cross_language  freeusd_edit_target_test  freeusd_gf_range1d_test  freeusd_sdf_tokens_test
build-int/src/: Makefile  cmake_install.cmake
build-lic/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
build-lic/src/: Makefile  cmake_install.cmake
build-lic3/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
build-lic3/src/: Makefile  cmake_install.cmake
build-nocabi/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
build-nocabi/src/: Makefile  cmake_install.cmake
build-pc/: CMakeCache.txt  Makefile  cmake_install.cmake  freeusd.pc  install_manifest.txt
build-pc/src/: Makefile  cmake_install.cmake
build-pc2/: CMakeCache.txt  Makefile  cmake_install.cmake  freeusd.pc
build-pkg/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  freeusd_ar_resolved_path_test  freeusd_c_stage_composition_arcs  freeusd_c_stage_custom_layer_data  freeusd_c_stage_layer_hints  freeusd_c_stage_open_from_file  freeusd_c_stage_prefix_substitution  freeusd_c_stage_relocate  freeusd_c_stage_variant  freeusd_c_usd_cross_language  freeusd_gf_range1d_test  freeusd_pcp_compose_test  freeusd_schema_tokens_bundle_test  freeusd_sdf_asset_path_test  freeusd_stage_compose_test  freeusd_stage_open_file_test  freeusd_usd_cross_language_test  freeusd_usd_smoke_test  freeusd_usda_roundtrip_test  install_manifest.txt
build-verify/: CMakeCache.txt  CTestTestfile.cmake  FreeUSDConfig.cmake  Makefile  cmake_install.cmake  freeusd_c_stage_prim_specifier  freeusd_c_stage_variant  freeusd_pcp_compose_test  freeusd_schema_tokens_bundle_test  freeusd_sdf_asset_path_test  freeusd_sdf_layer_offset_test  freeusd_selftest  freeusd_stage_open_file_test  freeusd_usd_smoke_test  freeusd_usd_tokens_test  freeusd_usda_roundtrip_test
build-wintest/: CMakeCache.txt  CTestTestfile.cmake  FreeUSDConfig.cmake  Makefile  cmake_install.cmake  freeusd_c_smoke_test  freeusd_c_stage_custom_layer_data  freeusd_sdf_path_test
cmake/: FreeUSDConfig.cmake.in  freeusd.pc.in  sync_native_post_build.py
docs/: clean-room-policy.md  compatibility-claims.md  engine-integration.md  engine-supported-subset.md  fixture-policy.md  github-actions.md  openusd-map.md  openusd-parity-matrix.md  openusd-repo-alignment.md  usdc-fixture-compression.md
freeusd/: __init__.py
python/: bindings.cpp
scripts/: check_engine_contract_docs.py  gen_parity_compressed_usdc.py  gen_parity_embedded_scene_lz4_usdc.py  gen_parity_embedded_scene_usdc.py  gen_parity_embedded_scene_zlib_usdc.py  gen_parity_lz4_usdc.py  gen_parity_tables_usdc.py  gen_schema_tokens.py  patch_go_bindings.py  run_ci_locally.sh
src/: CMakeLists.txt  diagnostic.cpp  layer.cpp  path.cpp  usda.cpp  value.cpp  version.cpp
src/ar/: defaultResolver.cpp  pathSecurity.cpp
src/c/: api.cpp
src/gf/: matrix4d.cpp
src/io/: usda.cpp
src/pcp/: compose.cpp  layerStack.cpp  resolve.cpp
src/plug/: registry.cpp
src/sdf/: fieldOpinion.cpp  layer.cpp  path.cpp  primReference.cpp
src/tf/: hash.cpp  token.cpp
src/usd/: crateFile.cpp  prim.cpp  stage.cpp
src/usdGeom/: boundable.cpp  imageable.cpp  mesh.cpp  xformable.cpp
src/usdLux/: cylinderLight.cpp  diskLight.cpp  distantLight.cpp  domeLight.cpp  rectLight.cpp  sphereLight.cpp
src/usdPhysics/: collisionAPI.cpp  fixedJoint.cpp  massAPI.cpp  physicsScene.cpp  rigidBodyAPI.cpp
src/usdSemantics/: labelsAPI.cpp
src/usdShade/: material.cpp  previewSurface.cpp  shader.cpp
src/usdSkel/: blendShape.cpp  gltfMapping.cpp  morphTargets.cpp  skelAnimation.cpp  skelBinding.cpp  skelBlendShapes.cpp  skelRoot.cpp  skeleton.cpp  skinning.cpp
src/usdUtils/: engineScene.cpp  pipeline.cpp
src/usdVol/: openVdbAsset.cpp  volume.cpp
src/vt/: value.cpp
tests/: ar_path_security_test.cpp  ar_resolved_path_test.cpp  c_abi_smoke.c  c_engine_integration.c  c_stage_composition_arcs.c  c_stage_custom_layer_data.c  c_stage_layer_hints.c  c_stage_open_from_file.c  c_stage_prefix_substitution.c  c_stage_prim_specifier.c  c_stage_relocate.c  c_stage_variant.c  c_usd_cross_language.c  c_usd_lux.c  c_usd_physics.c  c_usd_physics_collision.c  c_usd_physics_fixed_joint.c  c_usd_physics_mass.c  c_usd_physics_rigid_body.c  c_usd_semantics_labels.c  c_usd_shade.c  c_usd_skel.c  c_usd_vol.c  c_usdutils_spatial_grounding.c  edit_target_test.cpp  engine_integration_test.cpp  gf_bbox3d_test.cpp  gf_matrix4d_test.cpp  gf_quatd_test.cpp  gf_range1d_test.cpp  install_integration.cmake  parity_fixtures_test.cpp  pcp_compose_test.cpp  schema_tokens_bundle_test.cpp  sdf_asset_path_test.cpp  sdf_layer_offset_test.cpp  sdf_path_test.cpp  sdf_tokens_test.cpp  selftest.cpp  stage_compose_test.cpp  (+35 more)
(+327 files in other folders)
